- Main navigation alignment fixed

--- a/ildiesign-stylesheet.css
+++ b/ildiesign-stylesheet.css
@@ -73,6 +73,7 @@
 
 .menu-item-container {
     display: inline-block;
+    margin-left: -42px;
 }
 
 .ildiesign-nav-logo {
